Added hasNotableGame on companies Added indiedevelopers and videogamesdeveloper countries on companies

--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 215,
    "metadata": {
     "id": "JXZwhL0Bmzfp"
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 216,
    "outputs": [],
    "source": [
     "absPath = str(Path(os.path.abspath(os.getcwd())).absolute())\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 217,
    "outputs": [],
    "source": [
     "# Country Ontology\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 218,
    "outputs": [],
    "source": [
     "def createGraph():\n",
@@ -133,7 +133,6 @@
     "            gameID += '-'\n",
     "    if len(gameID) > 0 and gameID[-1] == '-':\n",
     "        gameID = gameID[:-1]\n",
-    "    #print(gameID.lower())\n",
     "    return gameID.lower()\n",
     "\n",
     "\n",
@@ -145,7 +144,7 @@
     "    for i in range(len(genre)):\n",
     "        list.append([])\n",
     "        list[i].append(genre[i])\n",
-    "        genreID=\"\"\n",
+    "        genreID = \"\"\n",
     "        for t in genre[i]:\n",
     "            if t.isalnum():\n",
     "                genreID = genreID + t\n",
@@ -154,27 +153,28 @@
     "\n",
     "        list[i].append(genreID.lower().strip(\"-\"))\n",
     "        #list[i].append(genre[i].lower().replace(\"'\", \"\").replace(\" \", \"-\").strip(\"-\"))\n",
-    "    return (list)\n",
+    "    return list\n",
     "\n",
     "\n",
     "def setPlatformID(platform):\n",
-    "    companyID=''\n",
+    "    platformID = ''\n",
     "    for i in platform:\n",
     "        if i.isalnum():\n",
-    "            companyID = companyID + i\n",
+    "            platformID = platformID + i\n",
     "        else:\n",
-    "            companyID = companyID + \"-\"\n",
-    "    return companyID.lower()\n",
+    "            platformID = platformID + \"-\"\n",
+    "    return platformID.lower()\n",
     "\n",
     "\n",
     "def setCompanyID(company):\n",
-    "    companyID=''\n",
+    "    companyID = ''\n",
     "    for i in company:\n",
     "        if i.isalnum():\n",
     "            companyID = companyID + i\n",
     "        else:\n",
     "            companyID = companyID + \"-\"\n",
     "    return companyID.lower()\n",
+    "\n",
     "\n",
     "#def setDeveloperID(developer):\n",
     "#    return developer.replace(' ', '-', regex=True).str.lower()\n",
@@ -187,10 +187,13 @@
     "    rawCountriesRegions = pd.read_csv(rawCountriesRegionsPath, sep=\",\", index_col='name')\n",
     "    if country.lower() == 'namibia':\n",
     "        return 'na'\n",
+    "    if 'united kingdom' in country.lower() or 'england' in country.lower():\n",
+    "        return 'gb'\n",
+    "    if 'united states' == country.lower():\n",
+    "        return 'us'\n",
     "    if country in rawCountriesRegions.index:\n",
     "        return rawCountriesRegions[rawCountriesRegions.index == country]['alpha-2'].values[0].lower()\n",
     "    elif country.lower() in rawCountriesRegions['alpha-2']:\n",
-    "        print('ciaoooo')\n",
     "        return country\n",
     "    return ''"
    ],
@@ -222,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 219,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -234,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 220,
    "outputs": [],
    "source": [
     "# Load the CSV files in memory\n",
@@ -250,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 221,
    "outputs": [],
    "source": [
     "# Iterate over the games\n",
@@ -283,15 +286,13 @@
     "    if pd.notna(row['developers']):\n",
     "        for iterator in row['developers'].split(', '):\n",
     "            get_string = lambda s: s.split('(')[0]\n",
-    "            g.add((Game, HLTB['developedBy'],HLTB[setCompanyID(get_string(iterator)).strip(\"-\")]))\n",
+    "            g.add((Game, HLTB['developedBy'], HLTB[setCompanyID(get_string(iterator)).strip(\"-\")]))\n",
     "\n",
     "    #Add publishers\n",
     "    if pd.notna(row['publishers']):\n",
     "        for iterator in row['publishers'].split(', '):\n",
     "            get_string = lambda s: s.split('(')[0]\n",
-    "            g.add((Game, HLTB['publishedBy'],HLTB[setCompanyID(get_string(iterator)).strip(\"-\")]))\n",
-    "\n",
-    "\n",
+    "            g.add((Game, HLTB['publishedBy'], HLTB[setCompanyID(get_string(iterator)).strip(\"-\")]))\n",
     "\n",
     "    #Add platform availability\n",
     "    if pd.notna(row[\"platforms\"]):\n",
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 222,
    "outputs": [
     {
      "name": "stdout",
@@ -373,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 223,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -388,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 224,
    "outputs": [],
    "source": [
     "for genre, row in genres.iterrows():\n",
@@ -407,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 225,
    "outputs": [],
    "source": [
     "# Save genre data in the Turtle format\n",
@@ -429,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 226,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -443,16 +444,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Panasonic': 'Japan', 'Sanyo': 'Japan', 'GoldStar': 'Korea, Republic of', 'Commodore': 'Canada', 'Atari Inc': 'United States of America', 'Atari Corporation': 'United States of America', 'Coleco': 'United States of America', 'Sega': 'Japan', 'Fujitsu': 'Japan', 'Mattel Electronics': 'United States of America', 'Nintendo': 'Japan', 'Magnavox': 'United States of America', 'Philips': 'Netherlands', 'Sony': 'Japan', 'Tec Toy': 'Brazil', 'Majesco Entertainment': 'Japan', 'Microsoft': 'United States of America', 'Zeebo Inc': 'United States of America', 'TecToy': 'Brazil'}\n"
-     ]
-    }
-   ],
+   "execution_count": 227,
+   "outputs": [],
    "source": [
     "manufacturerDict = {}\n",
     "\n",
@@ -514,12 +507,21 @@
     "                    manufacturerCountry = 'Japan'\n",
     "\n",
     "            manufacturerDict[manufacturerName] = manufacturerCountry\n",
-    "            #print(manufacturerCountry)\n",
     "            if manufacturerName != '':\n",
-    "                manufacturer = URIRef(HLTB[setCompanyID(manufacturerName)])\n",
-    "                g.add((Platform, HLTB[\"createdBy\"], manufacturer))\n",
-    "            # match manufacturer with companies\n",
-    "print(manufacturerDict)"
+    "                # get manufacturer URI\n",
+    "                manufacturerURI = URIRef(HLTB[setCompanyID(manufacturerName)])\n",
+    "\n",
+    "                # Add platform's manufacturer\n",
+    "                g.add((Platform, HLTB[\"createdBy\"], manufacturerURI))\n",
+    "                #\n",
+    "                # # Add manufactuer to companies\n",
+    "                # g.add((manufacturerURI, RDF.type, HLTB.Company))\n",
+    "                #\n",
+    "                # #Add manufacturer official name\n",
+    "                # g.add((manufacturerURI, HLTB['officialName'], Literal(manufacturerName, datatype=XSD.string)))\n",
+    "                # if manufacturerCountry != '':\n",
+    "                #     # add manufacturer's country\n",
+    "                #     g.add((manufacturerURI, HLTB['basedIn'], CNS[getCountry2Digits(manufacturerCountry)]))"
    ],
    "metadata": {
     "collapsed": false
@@ -527,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 228,
    "outputs": [],
    "source": [
     "# Save data in the Turtle format\n",
@@ -549,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 229,
    "outputs": [],
    "source": [
     "g = createGraph()\n",
@@ -569,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 230,
    "outputs": [],
    "source": [
     "for id, row in merged.iterrows():\n",
@@ -590,7 +592,7 @@
     "            g.add((StatsID, HLTB[\"fastestTime\"], Literal(int(row[\"comp_high\"]), datatype=XSD.int)))\n",
     "\n",
     "        #Add remaining stats\n",
-    "        if pd.notna(row[\"critic_score\"]) and (float(row[\"critic_score\"]) > 0.1) :\n",
+    "        if pd.notna(row[\"critic_score\"]) and (float(row[\"critic_score\"]) > 0.1):\n",
     "            g.add((StatsID, HLTB[\"criticScore\"], Literal(row[\"critic_score\"], datatype=XSD.float)))\n",
     "        if pd.notna(row[\"user_score\"]) and (float(row[\"user_score\"]) > 0.1):\n",
     "            g.add((StatsID, HLTB[\"userScore\"], Literal(row[\"user_score\"], datatype=XSD.float)))\n",
@@ -608,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 231,
    "outputs": [
     {
      "name": "stdout",
@@ -619,7 +621,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Save the data in the Turtle format\n",
     "with open(statsTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
     "    fp.write(g.serialize(format=\"turtle\"))\n",
@@ -641,14 +642,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 232,
    "outputs": [],
    "source": [
     "g = createGraph()\n",
     "vgchartz = pd.read_csv(vgchartzPath, sep=\",\")\n",
     "platforms = pd.read_csv(platformsPath, sep=\",\")\n",
     "\n",
-    "merged = pd.merge(vgchartz, platforms, left_on='console', right_on='Acronym', how='left')\n"
+    "merged = pd.merge(vgchartz, platforms, left_on='console', right_on='Acronym', how='left')"
    ],
    "metadata": {
     "collapsed": false
@@ -656,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 233,
    "outputs": [],
    "source": [
     "for id, row in merged.iterrows():\n",
@@ -708,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 234,
    "outputs": [
     {
      "name": "stdout",
@@ -742,13 +743,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 235,
    "outputs": [],
    "source": [
     "# Create Graph\n",
     "g = createGraph()\n",
-    "# Load the CSV files in memory\n",
     "\n",
+    "# Load the CSV files in memory\n",
     "indiegamesdevelopers = pd.read_csv(indiegamesdevelopersPath, sep=\",\")"
    ],
    "metadata": {
@@ -757,21 +758,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 240,
    "outputs": [],
    "source": [
-    "#indiegamesdevelopers.info()\n",
     "for index, row in indiegamesdevelopers.iterrows():\n",
     "    # Create the node to add to the Graph\n",
     "    Company = URIRef(HLTB[setCompanyID(row['Developer'])])\n",
-    "    #companies.append(Company)\n",
     "\n",
     "    # Add triples using store's add() method.\n",
     "    g.add((Company, RDF.type, HLTB.Company))\n",
     "\n",
     "    # Add the Company\n",
     "    g.add((Company, HLTB[\"indieDeveloper\"], Literal(pd.notnull(row['Developer']), datatype=XSD.boolean)))\n",
-    "    g.add((Company, HLTB['officialName'], Literal(row['Developer'], datatype=XSD.string)))\n"
+    "    g.add((Company, HLTB['officialName'], Literal(row['Developer'], datatype=XSD.string)))\n",
+    "\n",
+    "    # Add the company's country\n",
+    "    code = getCountry2Digits(row['Country'])\n",
+    "    if code != '':\n",
+    "        g.add((Company, HLTB['basedIn'], CNS[code]))\n",
+    "\n",
+    "    # Add the notable games\n",
+    "    if pd.notnull(row['selected_titles_series']) or pd.notna(row['selected_titles_series']):\n",
+    "        g.add((Company, HLTB['hasNotableGame'], HLTB[createGameID(row['selected_titles_series'])]))\n",
+    "    # elif row['Notable games'].notnull() or row['Notable games'].notna():\n",
+    "    #     g.add((Company, HLTB['hasNotableGame'], HLTB[createGameID(row['Notable games'])]))"
    ],
    "metadata": {
     "collapsed": false
@@ -788,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 241,
    "outputs": [],
    "source": [
     "videoGameDevelopers = pd.read_csv(videoGameDevelopersPath, sep=\",\")"
@@ -799,22 +809,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 242,
    "outputs": [],
    "source": [
-    "#indiegamesdevelopers.info()\n",
     "for index, row in videoGameDevelopers.iterrows():\n",
-    "\n",
     "    # Create the node to add to the Graph\n",
     "    Company = URIRef(HLTB[setCompanyID(row['Developer'])])\n",
-    "    #companies.append(Company)\n",
     "\n",
     "    # Add triples using store's add() method.\n",
     "    g.add((Company, RDF.type, HLTB.Company))\n",
     "\n",
     "    # Add the Company\n",
     "    g.add((Company, HLTB['officialName'], Literal(row['Developer'], datatype=XSD.string)))\n",
-    "\n"
+    "\n",
+    "    # Add the country\n",
+    "    if getCountry2Digits(row['Country']) != '':\n",
+    "        g.add((Company, HLTB['basedIn'], CNS[getCountry2Digits(row['Country'])]))\n",
+    "\n",
+    "    # Add the notable games\n",
+    "    if pd.notnull(row['selected_titles_series']) or pd.notna(row['selected_titles_series']):\n",
+    "        g.add((Company, HLTB['hasNotableGame'], HLTB[createGameID(row['selected_titles_series'])]))"
    ],
    "metadata": {
     "collapsed": false
@@ -831,15 +845,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 243,
    "outputs": [],
    "source": [
     "for manufacturer, country in manufacturerDict.items():\n",
     "    manufacturerURI = URIRef(HLTB[setCompanyID(manufacturer)])\n",
     "    g.add((manufacturerURI, RDF.type, HLTB.Company))\n",
     "    g.add((manufacturerURI, HLTB['officialName'], Literal(manufacturer, datatype=XSD.string)))\n",
-    "    # add country of that manufacturer\n",
-    "    #print(country)\n",
+    "    # add manufacturer's country\n",
     "    g.add((manufacturerURI, HLTB['basedIn'], CNS[getCountry2Digits(country)]))"
    ],
    "metadata": {
@@ -848,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 244,
    "outputs": [
     {
      "name": "stdout",
@@ -880,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 245,
    "outputs": [],
    "source": [
     "rawCountriesRegions = pd.read_csv(rawCountriesRegionsPath, sep=\",\", index_col='name')\n",
@@ -893,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 246,
    "outputs": [],
    "source": [
     "countriesRegions = rawCountriesRegions.replace(to_replace=['Asia', 'Europe', 'Africa', 'Oceania', 'Americas', 'NaN'],\n",
@@ -916,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 247,
    "outputs": [
     {
      "name": "stdout",
@@ -948,11 +961,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 248,
    "outputs": [],
    "source": [
     "g = createGraph()\n",
-    "platforms = pd.read_csv(platformsPath, sep=\",\")\n"
+    "platforms = pd.read_csv(platformsPath, sep=\",\")"
    ],
    "metadata": {
     "collapsed": false
@@ -960,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 249,
    "outputs": [],
    "source": [
     "for id, row in platforms.iterrows():\n",
@@ -1010,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,8 +1078,6 @@
     "#    fp.write(g.serialize(format=\"turtle\"))\n",
     "\n",
     "#print(\"Saved Regions TTL file.\")\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "# for val in manufacturerDict.values():\n",
