--- a/indiegamesdevelopers&games&vgchartz&videogamesdevelopers_cleaning.ipynb
+++ b/indiegamesdevelopers&games&vgchartz&videogamesdevelopers_cleaning.ipynb
@@ -5,14 +5,19 @@
    "metadata": {},
    "source": [
     "This Python script is used to clean 4 datasets in the raw_data folder. Including\n",
-    "1. vgchartz-7_7_2020.csv\n",
-    "2. video-games-developers.csv\n",
-    "3. indie-games-developers.csv\n",
-    "4. games.csv \n",
+    "<ol>\n",
+    "<li>vgchartz-7_7_2020.csv</li>\n",
+    "<li>video-games-developers.csv</li>\n",
+    "<li>indie-games-developers.csv</li>\n",
+    "<li>games.csv </li>\n",
+    "</ol>\n",
     "\n",
-    "Cleaning Processes\n",
+    "<strong>Cleaning Processes</strong>\n",
+    "\n",
     "vgchartz-7_7_2020.csv\n",
-    "1. Only keep the game titles existing in games.csv, and delete the games not in games.csv. 2. Eliminate the games without mentioning platform. 3. Drop the useless columns.\n",
+    "1. Only keep the game titles existing in games.csv, and delete the games not in games.csv. \n",
+    "2. Eliminate the games without mentioning platform. \n",
+    "3. Drop the useless columns.\n",
     "\n",
     "video-games-developers.csv\n",
     "1. drop useless columns\n",
@@ -26,7 +31,7 @@
     "\n",
     "games.csv\n",
     "1. drop useless columns\n",
-    "2. epand the platforms in \"platforms\""
+    "2. epand the platforms listed in \"platforms\""
    ]
   },
   {
