--- a/indiegamesdevelopers&games&vgchartz&videogamesdevelopers_cleaning.ipynb
+++ b/indiegamesdevelopers&games&vgchartz&videogamesdevelopers_cleaning.ipynb
@@ -988,6 +988,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# indie selected_titles match\n",
+    "indiegamesdevelopers.selected_titles.str.len().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# indie selected_titles_series match\n",
+    "indiegamesdevelopers.selected_titles_series.str.len().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 115,
    "metadata": {
     "colab": {
@@ -2245,6 +2265,14 @@
     }
    ],
    "source": [
+    "# If not present the developer place it equal to the publishers in games.cvs\n",
+    "def isNaN(string):\n",
+    "    return string != string\n",
+    "\n",
+    "for index, row in games.iterrows():\n",
+    "    if isNaN(row[\"developers\"]) :\n",
+    "        games.at[index,\"developers\"]= row[\"publishers\"]\n",
+    "\n",
     "games = games.drop(columns=['release_na', 'release_eu', 'release_jp'])\n",
     "games['platforms'] = games['platforms'].str.split(',')\n",
     "games = games.explode('platforms').reset_index(drop=True)\n",
