fix in slowest-fastestTime data property

--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {
     "id": "JXZwhL0Bmzfp"
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "absPath = str(Path(os.path.abspath(os.getcwd())).absolute())\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# Country Ontology\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def createGraph():\n",
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# Load the CSV files in memory\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# Iterate over the games\n",
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "for genre, row in genres.iterrows():\n",
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "# Save genre data in the Turtle format\n",
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "manufacturerDict = {}\n",
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "# Save data in the Turtle format\n",
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "for id, row in merged.iterrows():\n",
@@ -576,8 +576,8 @@
     "            g.add((StatsID, HLTB[\"mainTime\"], Literal(int(row[\"comp_main\"]), datatype=XSD.int)))\n",
     "            g.add((StatsID, HLTB[\"mainPlusTime\"], Literal(int(row[\"comp_plus\"]), datatype=XSD.int)))\n",
     "            g.add((StatsID, HLTB[\"completionistTime\"], Literal(int(row[\"comp_100\"]), datatype=XSD.int)))\n",
-    "            g.add((StatsID, HLTB[\"slowestTime\"], Literal(int(row[\"comp_low\"]), datatype=XSD.int)))\n",
-    "            g.add((StatsID, HLTB[\"fastestTime\"], Literal(int(row[\"comp_high\"]), datatype=XSD.int)))\n",
+    "            g.add((StatsID, HLTB[\"slowestTime\"], Literal(int(row[\"comp_high\"]), datatype=XSD.int)))\n",
+    "            g.add((StatsID, HLTB[\"fastestTime\"], Literal(int(row[\"comp_low\"]), datatype=XSD.int)))\n",
     "\n",
     "        #Add remaining stats\n",
     "        if pd.notna(row[\"critic_score\"]) and (float(row[\"critic_score\"]) > 0.1):\n",
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "for id, row in merged.iterrows():\n",
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "for index, row in indiegamesdevelopers.iterrows():\n",
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "# Create merged datasets\n",
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "for index, row in videoGameDevelopers.iterrows():\n",
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "for manufacturer, country in manufacturerDict.items():\n",
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "countriesRegions = rawCountriesRegions.replace(to_replace=['Asia', 'Europe', 'Africa', 'Oceania', 'Americas', 'NaN'],\n",
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 29,
    "outputs": [
     {
      "name": "stdout",
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "g = createGraph()\n",
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "for id, row in platforms.iterrows():\n",
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
