--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 66,
    "metadata": {
     "id": "JXZwhL0Bmzfp"
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "outputs": [],
    "source": [
     "absPath = str(Path(os.path.abspath(os.getcwd())).absolute())\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "outputs": [],
    "source": [
     "# Country Ontology\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "outputs": [],
    "source": [
     "def createGraph():\n",
@@ -131,9 +131,7 @@
     "            gameID += char\n",
     "        elif len(gameID) > 0 and gameID[-1] != '-':\n",
     "            gameID += '-'\n",
-    "    if len(gameID) > 0 and gameID[-1] == '-':\n",
-    "        gameID = gameID[:-1]\n",
-    "    return gameID.lower()\n",
+    "    return gameID.strip('-').lower()\n",
     "\n",
     "\n",
     "#Create genre URI\n",
@@ -161,9 +159,9 @@
     "    for i in platform:\n",
     "        if i.isalnum():\n",
     "            platformID = platformID + i\n",
-    "        else:\n",
+    "        elif len(platformID) > 0 and platformID[-1] != '-':\n",
     "            platformID = platformID + \"-\"\n",
-    "    return platformID.lower()\n",
+    "    return platformID.strip('-').lower()\n",
     "\n",
     "\n",
     "def setCompanyID(company):\n",
@@ -171,9 +169,9 @@
     "    for i in company:\n",
     "        if i.isalnum():\n",
     "            companyID = companyID + i\n",
-    "        else:\n",
+    "        elif len(companyID) > 0 and companyID[-1] != '-':\n",
     "            companyID = companyID + \"-\"\n",
-    "    return companyID.lower()\n",
+    "    return companyID.strip('-').lower()\n",
     "\n",
     "\n",
     "def getCountry2Digits(country):\n",
@@ -218,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 70,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -230,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 71,
    "outputs": [],
    "source": [
     "# Load the CSV files in memory\n",
@@ -246,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 72,
    "outputs": [],
    "source": [
     "# Iterate over the games\n",
@@ -279,13 +277,13 @@
     "    if pd.notna(row['developers']):\n",
     "        for iterator in row['developers'].split(', '):\n",
     "            get_string = lambda s: s.split('(')[0]\n",
-    "            g.add((Game, HLTB['developedBy'], HLTB[setCompanyID(get_string(iterator)).strip(\"-\")]))\n",
+    "            g.add((Game, HLTB['developedBy'], HLTB[setCompanyID(get_string(iterator))]))\n",
     "\n",
     "    #Add publishers\n",
     "    if pd.notna(row['publishers']):\n",
     "        for iterator in row['publishers'].split(', '):\n",
     "            get_string = lambda s: s.split('(')[0]\n",
-    "            g.add((Game, HLTB['publishedBy'], HLTB[setCompanyID(get_string(iterator)).strip(\"-\")]))\n",
+    "            g.add((Game, HLTB['publishedBy'], HLTB[setCompanyID(get_string(iterator))]))\n",
     "\n",
     "    #Add platform availability\n",
     "    if pd.notna(row[\"platforms\"]):\n",
@@ -333,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 73,
    "outputs": [
     {
      "name": "stdout",
@@ -367,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 74,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -382,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 75,
    "outputs": [],
    "source": [
     "for genre, row in genres.iterrows():\n",
@@ -401,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 76,
    "outputs": [],
    "source": [
     "# Save genre data in the Turtle format\n",
@@ -423,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 77,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -438,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 78,
    "outputs": [],
    "source": [
     "manufacturerDict = {}\n",
@@ -514,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 79,
    "outputs": [],
    "source": [
     "# Save data in the Turtle format\n",
@@ -536,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 80,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -559,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 81,
    "outputs": [],
    "source": [
     "for id, row in merged.iterrows():\n",
@@ -598,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 82,
    "outputs": [
     {
      "name": "stdout",
@@ -630,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 83,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -649,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 84,
    "outputs": [],
    "source": [
     "for id, row in merged.iterrows():\n",
@@ -701,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 85,
    "outputs": [
     {
      "name": "stdout",
@@ -735,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 86,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -750,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 87,
    "outputs": [],
    "source": [
     "for index, row in indiegamesdevelopers.iterrows():\n",
@@ -788,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 88,
    "outputs": [],
    "source": [
     "# Create merged datasets\n",
@@ -800,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 89,
    "outputs": [],
    "source": [
     "for index, row in videoGameDevelopers.iterrows():\n",
@@ -829,6 +827,41 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Games"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "outputs": [],
+   "source": [
+    "# Iterate over the games\n",
+    "for title, row in games.iterrows():\n",
+    "    if pd.notna(row['developers']):\n",
+    "        for iterator in row['developers'].split(', '):\n",
+    "            get_string = lambda s: s.split('(')[0]\n",
+    "            # Add company\n",
+    "            Company = URIRef(HLTB[setCompanyID(get_string(iterator))])\n",
+    "            g.add((Company, RDF.type, HLTB.Company))\n",
+    "\n",
+    "    #Add publishers\n",
+    "    if pd.notna(row['publishers']):\n",
+    "        for iterator in row['publishers'].split(', '):\n",
+    "            get_string = lambda s: s.split('(')[0]\n",
+    "            # Add company\n",
+    "            Company = URIRef(HLTB[setCompanyID(get_string(iterator))])\n",
+    "            g.add((Company, RDF.type, HLTB.Company))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "### Manufacturers"
    ],
    "metadata": {
@@ -837,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 91,
    "outputs": [],
    "source": [
     "for manufacturer, country in manufacturerDict.items():\n",
@@ -853,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 92,
    "outputs": [
     {
      "name": "stdout",
@@ -885,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 93,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -900,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 94,
    "outputs": [],
    "source": [
     "countriesRegions = rawCountriesRegions.replace(to_replace=['Asia', 'Europe', 'Africa', 'Oceania', 'Americas', 'NaN'],\n",
@@ -925,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 95,
    "outputs": [
     {
      "name": "stdout",
@@ -957,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 96,
    "outputs": [],
    "source": [
     "g = createGraph()\n",
@@ -969,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 97,
    "outputs": [],
    "source": [
     "for id, row in platforms.iterrows():\n",
@@ -1019,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
