Renamed ontology IRI, changed rdf subclassof to locatedin

--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 34,
    "metadata": {
     "id": "JXZwhL0Bmzfp"
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 35,
    "outputs": [],
    "source": [
     "absPath = str(Path(os.path.abspath(os.getcwd())).absolute())\n",
@@ -92,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 36,
    "outputs": [],
    "source": [
     "# Country Ontology\n",
     "CNS = Namespace(\"http://eulersharp.sourceforge.net/2003/03swap/countries#\")\n",
     "\n",
     "# HLTB Ontology\n",
-    "HLTB = Namespace(\"http://www.semanticweb.org/enrico/ontologies/2022/10/HLTB-db2unipd#\")"
+    "HLTB = Namespace(\"http://www.dei.unipd.it/database2/HLTB-db2unipd#\")"
    ],
    "metadata": {
     "collapsed": false
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "def createGraph():\n",
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 38,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 39,
    "outputs": [],
    "source": [
     "# Load the CSV files in memory\n",
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 40,
    "outputs": [],
    "source": [
     "# Iterate over the games\n",
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 41,
    "outputs": [
     {
      "name": "stdout",
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 42,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 43,
    "outputs": [],
    "source": [
     "for genre, row in genres.iterrows():\n",
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 44,
    "outputs": [],
    "source": [
     "# Save genre data in the Turtle format\n",
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 45,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 46,
    "outputs": [],
    "source": [
     "manufacturerDict = {}\n",
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 47,
    "outputs": [],
    "source": [
     "# Save data in the Turtle format\n",
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 48,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 49,
    "outputs": [],
    "source": [
     "for id, row in merged.iterrows():\n",
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 50,
    "outputs": [
     {
      "name": "stdout",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 51,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 52,
    "outputs": [],
    "source": [
     "for id, row in merged.iterrows():\n",
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 53,
    "outputs": [
     {
      "name": "stdout",
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 54,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 55,
    "outputs": [],
    "source": [
     "for index, row in indiegamesdevelopers.iterrows():\n",
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 56,
    "outputs": [],
    "source": [
     "# Create merged datasets\n",
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 57,
    "outputs": [],
    "source": [
     "for index, row in videoGameDevelopers.iterrows():\n",
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 58,
    "outputs": [],
    "source": [
     "# Iterate over the games\n",
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 59,
    "outputs": [],
    "source": [
     "for manufacturer, country in manufacturerDict.items():\n",
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 60,
    "outputs": [
     {
      "name": "stdout",
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 61,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 62,
    "outputs": [],
    "source": [
     "countriesRegions = rawCountriesRegions.replace(to_replace=['Asia', 'Europe', 'Africa', 'Oceania', 'Americas', 'NaN'],\n",
@@ -950,7 +950,7 @@
     "        region = 'other'\n",
     "    elif code in northAmericaCountries:\n",
     "        region = 'na'\n",
-    "    g.add((CNS[code], RDFS['subClassOf'], HLTB[region]))"
+    "    g.add((CNS[code], HLTB['locatedIn'], HLTB[region]))"
    ],
    "metadata": {
     "collapsed": false
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 63,
    "outputs": [
     {
      "name": "stdout",
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 64,
    "outputs": [],
    "source": [
     "g = createGraph()\n",
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 65,
    "outputs": [],
    "source": [
     "for id, row in platforms.iterrows():\n",
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
