--- a/indie_games_developers_videogamesdevelopers_cleaning.ipynb
+++ b/indie_games_developers_videogamesdevelopers_cleaning.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 160,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 161,
    "metadata": {
     "id": "D3XAiuS51rXC"
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 162,
    "metadata": {
     "id": "XvBieS4M16Kc"
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 163,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -125,7 +125,7 @@
        "Name: platforms, Length: 35922, dtype: object"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 165,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -386,7 +386,7 @@
        "[25867 rows x 10 columns]"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 166,
    "metadata": {
     "id": "rqXy0qZygeE1"
    },
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 167,
    "metadata": {
     "id": "kDsq_SYpKVRQ"
    },
@@ -453,7 +453,6 @@
        "      <th>Country</th>\n",
        "      <th>Notable games</th>\n",
        "      <th>developers</th>\n",
-       "      <th>selected_titles</th>\n",
        "      <th>selected_titles_series</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -465,7 +464,6 @@
        "      <td>AnomalyThis War of MineFrostpunk</td>\n",
        "      <td>11 bit studios</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -473,7 +471,6 @@
        "      <td>Poland</td>\n",
        "      <td>AnomalyThis War of MineFrostpunk</td>\n",
        "      <td>11 bit studios</td>\n",
-       "      <td>[This War of Mine, Frostpunk]</td>\n",
        "      <td>[Frostpunk, This War of Mine]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -483,7 +480,6 @@
        "      <td>Zeno ClashRock of Ages</td>\n",
        "      <td>ace team</td>\n",
        "      <td>[Rock of Ages, Zeno Clash]</td>\n",
-       "      <td>[Rock of Ages, Zeno Clash]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -492,7 +488,6 @@
        "      <td>CapsizedApotheon</td>\n",
        "      <td>alientrap</td>\n",
        "      <td>[Apotheon]</td>\n",
-       "      <td>[Apotheon]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -500,12 +495,10 @@
        "      <td>United States</td>\n",
        "      <td>Escape Velocity series</td>\n",
        "      <td>ambrosia software</td>\n",
-       "      <td>[Escape Velocity]</td>\n",
        "      <td>[Escape Velocity, Escape Velocity Override]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -519,7 +512,6 @@
        "      <td>Darkness WithinDarkness Within: The Dark Lineage</td>\n",
        "      <td>zoetrope interactive</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>155</th>\n",
@@ -528,7 +520,6 @@
        "      <td>PlayStation All-Stars IslandThe Kore Gang</td>\n",
        "      <td>zoink</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>156</th>\n",
@@ -536,7 +527,6 @@
        "      <td>United Kingdom</td>\n",
        "      <td>ZendokuBonsai Barber</td>\n",
        "      <td>zoonami</td>\n",
-       "      <td>[Bonsai Barber, Zendoku]</td>\n",
        "      <td>[Zendoku, Bonsai Barber]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -546,7 +536,6 @@
        "      <td>First Battalion</td>\n",
        "      <td>zootfly</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>158</th>\n",
@@ -555,11 +544,10 @@
        "      <td>First Battalion</td>\n",
        "      <td>zootfly</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>155 rows × 6 columns</p>\n",
+       "<p>155 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -589,19 +577,6 @@
        "157                                   First Battalion               zootfly   \n",
        "158                                   First Battalion               zootfly   \n",
        "\n",
-       "                   selected_titles  \\\n",
-       "0                               []   \n",
-       "1    [This War of Mine, Frostpunk]   \n",
-       "2       [Rock of Ages, Zeno Clash]   \n",
-       "3                       [Apotheon]   \n",
-       "4                [Escape Velocity]   \n",
-       "..                             ...   \n",
-       "154                             []   \n",
-       "155                             []   \n",
-       "156       [Bonsai Barber, Zendoku]   \n",
-       "157                             []   \n",
-       "158                             []   \n",
-       "\n",
        "                          selected_titles_series  \n",
        "0                                             []  \n",
        "1                  [Frostpunk, This War of Mine]  \n",
@@ -615,10 +590,10 @@
        "157                                           []  \n",
        "158                                           []  \n",
        "\n",
-       "[155 rows x 6 columns]"
+       "[155 rows x 5 columns]"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,20 +646,27 @@
     "  match_title_include_series(ind, indiegamesdevelopers['game_titles'][ind], indiegamesdevelopers['Notable games'][ind])\n",
     "\n",
     "indiegamesdevelopers = indiegamesdevelopers.drop(columns=['game_titles'])\n",
-    "\n",
-    "indiegamesdevelopers"
+    "indiegamesdevelopers_no_series = indiegamesdevelopers.drop(columns=['selected_titles_series'])\n",
+    "indiegamesdevelopers_series = indiegamesdevelopers.drop(columns=['selected_titles'])\n",
+    "indiegamesdevelopers_series"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 168,
    "metadata": {
     "id": "-GLI3qOCxyRJ"
    },
    "outputs": [],
    "source": [
+    "indiegamesdevelopers_no_series = indiegamesdevelopers_no_series.explode('selected_titles').reset_index(drop=True)\n",
     "indiegamesdevelopersfilename = cleanedDataPath +'/indiegamesdevelopers_cleaned.csv'\n",
-    "indiegamesdevelopers.to_csv(indiegamesdevelopersfilename) "
+    "indiegamesdevelopers_no_series.to_csv(indiegamesdevelopersfilename) \n",
+    "\n",
+    "indiegamesdevelopers_series = indiegamesdevelopers_series.explode('selected_titles_series').reset_index(drop=True)\n",
+    "indiegamesdevelopersfilename = cleanedDataPath +'/indiegamesdevelopers_cleaned_seriesExplode.csv'\n",
+    "indiegamesdevelopers_series.to_csv(indiegamesdevelopersfilename) \n",
+    "\n"
    ]
   },
   {
@@ -696,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +834,7 @@
        "[587 rows x 4 columns]"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,17 +886,28 @@
     "\n",
     "  \n",
     "developers = developers.drop(columns=['game_titles'])\n",
+    "developers_no_series = developers.drop(columns=['selected_titles_series'])\n",
+    "developers_series = developers.drop(columns=['selected_titles'])\n",
     "developers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "videogamesdevelopersfilename = cleanedDataPath +'/videogamesdevelopers_cleaned.csv'\n",
-    "developers.to_csv(videogamesdevelopersfilename) "
+    "developers.to_csv(videogamesdevelopersfilename) \n",
+    "\n",
+    "developers_no_series = developers_no_series.explode('selected_titles').reset_index(drop=True)\n",
+    "videogamesdevelopersfilename = cleanedDataPath +'/videogamesdevelopers_cleaned.csv'\n",
+    "developers_no_series.to_csv(videogamesdevelopersfilename) \n",
+    "\n",
+    "developers_series = developers_series.explode('selected_titles_series').reset_index(drop=True)\n",
+    "videogamesdevelopersfilename = cleanedDataPath +'/videogamesdevelopers_cleaned_seriesexplode.csv'\n",
+    "developers_series.to_csv(videogamesdevelopersfilename) \n"
    ]
   }
  ],
